Fixes extra spacing that was causing screen to scroll

--- a/client/src/components/Deck/deck.scss
+++ b/client/src/components/Deck/deck.scss
@@ -1,6 +1,7 @@
-$deck-height: 16;
-
+@import "~@/assets/scss/variables";
 @import "~@/components/Card/card";
+
+$deck-height: 16 !default;
 
 .dropdown-menu {
 	max-height: 200px;
