--- a/client/src/views/game.scss
+++ b/client/src/views/game.scss
@@ -72,7 +72,7 @@
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
-	padding: 1rem;
+	padding: 0.5rem;
 }
 
 .game-buttons {
